fixing overflow scrollbar

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,4 +1,3 @@
 .buttonRow {
     white-space: nowrap;
-    overflow-x: auto;
 }
